--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudflare-ip-blocker",
+  "name": "polar-mass-advanced-ip-blocker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
